<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.integratedmodelling</groupId>
        <artifactId>klab-services</artifactId>
        <version>0.11.0-SNAPSHOT</version>
    </parent>

    <artifactId>klab.cli</artifactId>
    <description>Command line engine with extensible commands, using an abstract engine and picocli/jline3 for the
        command line management
    </description>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.integratedmodelling</groupId>
                <artifactId>klab.product</artifactId>
                <version>1.0.1-SNAPSHOT</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>package-release</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <outputDirectory>target/build</outputDirectory>
                    <productName>klab.shell</productName>
                    <productClass>CLI</productClass>
                    <productMain>org.integratedmodelling.cli.KlabCLI</productMain>
                    <productDescription>The k.LAB command line shell</productDescription>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.integratedmodelling</groupId>
            <artifactId>klab.modeler</artifactId>
            <version>${klab.version}</version>
        </dependency>
        <dependency>
            <groupId>info.picocli</groupId>
            <artifactId>picocli-shell-jline3</artifactId>
            <version>4.7.5</version>
        </dependency>
        <dependency>
            <groupId>args4j</groupId>
            <artifactId>args4j</artifactId>
            <version>2.33</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

</project>